# Wavepacket-Scattering

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
scripts/: plot_tools.py  plotting_notebook.ipynb
src/: main.cpp  simulation.cpp  simulation.hpp
